--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -22,10 +22,21 @@ In 1950, Alan Turing envisioned in his seminal paper `Computing Machinery and In
 
 The notion of `human computer' benefits from some contextualisation, as in the last few decades we've become unaccustomed to the term. Human computers were not uncommon in the time of Turing and before that from the 18th century, when `computer' was used to signify `one who computes'\cite{grier2007computers}. People bearing the function title were involved in the execution of calculations produced by strictly following mathematical theories. The activity that these computers were involved in was a process of rote, not requiring any human creativity. While working on the design for the first ever mechanical computer, Charles Babbage called it ``mental labour''\cite[Ch.\ 20]{Babbage:1832vu}.
 
-Quinn and Bederson further present a classification along six dimensions they see as the most salient distinguishing factors:
+Quinn and Bederson further present a classification along six dimensions they see as the most salient distinguishing factors: \cite{Quinn:2011us}
 
-[table of dimensions?]
+% [table of dimensions?]
 
+\section{Humans Computing Visual Meaning}
+% examples of HCS with the purpose of computing meaning
+\subsection{Examples}
+\subsubsection{ESP Game}
+\subsubsection{Peek-a-Boom}
+\subsubsection{reCaptcha}
+
+
+
+
+\section{Computation in Interaction}
 % many people watching collaborating
 % is collective intelligence HC?
 Clicking from one video to the next (choosing from a set of related videos)
