werporter/implementation/preparation of content pseudo algorithm + diagram

--- a/mystyle.sty
+++ b/mystyle.sty
@@ -9,7 +9,15 @@
 
 
 \usepackage{amsmath}
+\usepackage{amsthm}
+% amsthm to include labelled enunciations
+%\begin{mydef}
+%Here is a new definition
+%\end{mydef}
+
+% for pseudo code algorithms
 \usepackage{algorithm,algpseudocode}
+
 \usepackage{caption}
 \usepackage{subcaption}
 
@@ -33,11 +41,7 @@
 % are typeset a little smaller.
 \renewcommand{\UrlFont}{\small\tt}
 
-% amsthm to include labelled enunciations
-%\begin{mydef}
-%Here is a new definition
-%\end{mydef}
-\usepackage{amsthm}
+
 
 \usepackage{fancyhdr}
 
